Just a UI fix related to the comment container when a username is very long, it affected the alignment of the comment bubble.

--- a/front/src/app/components/posts/comments-container/comments-container.component.scss
+++ b/front/src/app/components/posts/comments-container/comments-container.component.scss
@@ -19,6 +19,9 @@
 .username-label {
   margin-right: 10px; /* Space between the username label and the text container */
   margin-bottom: 20px;
+  width: 75px;
+  white-space: normal; /* Allow text to wrap */
+  overflow-wrap: break-word; /* Break words if necessary */
 }
 .comment {
   display: flex;
